# mutembei-v1

./: docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  auth.py  config.py  errors.py
backend/src/common/: base_service.py  pagination.py
backend/src/credentials/: router.py  schema.py  service.py  utils.py
backend/src/db/: main.py  models.py
backend/src/jobs/: router.py  schema.py  service.py
backend/src/workflows/: router.py  schema.py  service.py
frontend/: package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260315001752_01_init/: migration.sql
frontend/prisma/migrations/20260318212555_02_added_sheet_id/: migration.sql
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/: dashboard-layout.tsx  filter-tabs.tsx  pagination.tsx  search-input.tsx
frontend/src/components/ui/: button.tsx
frontend/src/features/auth/: auth-hook.ts
frontend/src/features/credentials/: config.ts  lib.ts  types.ts
frontend/src/features/jobs/: action.ts  config.ts  types.ts
frontend/src/features/settings/: action.ts  sheet-config.ts
frontend/src/features/workflows/: types.ts
frontend/src/hooks/: use-table-params.tsx
frontend/src/inngest/: channels.ts  client.ts  functions.ts
frontend/src/lib/: api.ts  auth-util.ts  auth.ts  handle-error.ts  prisma.ts
worker/: main.py  requirements.txt
worker/automation/: deploy.py  facility_setup.py  shif_config.py
(+44 files in other folders)
